--- a/Pymaceuticals/Pymaceuticals Experiment.ipynb
+++ b/Pymaceuticals/Pymaceuticals Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "249"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "248"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "Zoniferol     53.236507  51.818479  48.533355            6.966589  0.516398"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,9 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Tumor Volume (mm3) by Mouse ID"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -622,7 +631,7 @@
        "[248 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,12 +640,13 @@
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "mice_by_id=mouse_data_cleaned[[\"Mouse ID\", \"Tumor Volume (mm3)\"]].groupby(\"Mouse ID\")\n",
     "# Using the aggregation method, produce the same summary statistics in a single line\n",
+    "display_markdown(\"## Tumor Volume (mm3) by Mouse ID\",raw=True)\n",
     "mice_by_id.agg(['mean','median','var','std','sem'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -716,6 +726,222 @@
     "plt.pie(sizes,labels=labels)\n",
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>s185</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>23.343598</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>x401</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>45</td>\n",
+       "      <td>28.484033</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>m601</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>28.430964</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>g791</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>45</td>\n",
+       "      <td>29.128472</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>s508</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30.276232</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1859</th>\n",
+       "      <td>z314</td>\n",
+       "      <td>Stelasyn</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45.934712</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1862</th>\n",
+       "      <td>z435</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48.710661</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1872</th>\n",
+       "      <td>z581</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.754451</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1882</th>\n",
+       "      <td>z795</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>13</td>\n",
+       "      <td>29</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65.741070</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>45</td>\n",
+       "      <td>73.867845</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>248 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "19       s185    Capomulin  Female           3          17         45   \n",
+       "29       x401    Capomulin  Female          16          15         45   \n",
+       "39       m601    Capomulin    Male          22          17         45   \n",
+       "49       g791     Ramicane    Male          11          16         45   \n",
+       "59       s508     Ramicane    Male           1          17         45   \n",
+       "...       ...          ...     ...         ...         ...        ...   \n",
+       "1859     z314     Stelasyn  Female          21          28          5   \n",
+       "1862     z435     Propriva  Female          12          26         10   \n",
+       "1872     z581    Infubinol  Female          24          25         45   \n",
+       "1882     z795     Naftisol  Female          13          29         45   \n",
+       "1892     z969     Naftisol    Male           9          30         45   \n",
+       "\n",
+       "      Tumor Volume (mm3)  Metastatic Sites  \n",
+       "19             23.343598                 1  \n",
+       "29             28.484033                 0  \n",
+       "39             28.430964                 1  \n",
+       "49             29.128472                 1  \n",
+       "59             30.276232                 0  \n",
+       "...                  ...               ...  \n",
+       "1859           45.934712                 0  \n",
+       "1862           48.710661                 0  \n",
+       "1872           62.754451                 3  \n",
+       "1882           65.741070                 3  \n",
+       "1892           73.867845                 4  \n",
+       "\n",
+       "[248 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
+    "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
+    "\n",
+    "# Start by getting the last (greatest) timepoint for each mouse\n",
+    "last_timepoint = mouse_data_cleaned.groupby(\"Mouse ID\").max()[\"Timepoint\"]\n",
+    "\n",
+    "mouse_data_finaltime = pd.DataFrame()\n",
+    "mouse_data_finaltime[\"Last Timepoint\"]=mouse_data_cleaned[\"Mouse ID\"].groupby(last_timepoint)\n",
+    "mouse_data_finaltime[\"Last Timepoint\"]=last_timepoint\n",
+    "mouse_data_finaltime\n",
+    "\n",
+    "# Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n",
+    "index=mouse_data_cleaned.groupby(['Mouse ID'])['Timepoint'].transform(max) == mouse_data_cleaned['Timepoint']\n",
+    "mouse_data_new=mouse_data_cleaned[index]\n",
+    "mouse_data_new\n"
    ]
   },
   {
