--- a/Pymaceuticals/Pymaceuticals Experiment.ipynb
+++ b/Pymaceuticals/Pymaceuticals Experiment.ipynb
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data is being shown for mouse #r157.\n"
+      "Data is being shown for mouse #i738.\n"
      ]
     }
    ],
@@ -1371,6 +1371,7 @@
     "single_random_mouse_tp = one_mouse[\"Timepoint\"]\n",
     "single_random_mouse_tv = one_mouse[\"Tumor Volume (mm3)\"]\n",
     "\n",
+    "\n",
     "single_random_mouse_line = plt.plot(single_random_mouse_tp, single_random_mouse_tv, \n",
     "                                    color=\"blue\", label=\"Tumor Volume of Mouse\")\n",
     "plt.title(\"Tumor Volume for a Mouse on Capomulin\")\n",
@@ -1383,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
